# shitlist

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_shitlist.py
shitlist/: Config.py  __init__.py  cli.py  config.py  decorator_use_collector.py  deprecated_code_use_collector.py  deprecated_thing_use_collector.py  foo.py
tests/: requirements.txt
tests/example_module/: __init__.py  example_file.py
tests/example_module/submodule/: __init__.py  example_file.py  submodule_example_file.py
tests/shitlist/: test_shitlist.py
