[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shitlist"
version = "0.0.1"
authors = [
  { name="Sam Boyd", email="samboyd10@gmail.com" },
]
description = "Shitlist deprecation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samboyd/shitlist"
"Bug Tracker" = "https://github.com/samboyd/shitlist/issues"

[project.scripts]
"shitlist"= "shitlist.cli:main"

[tool.setuptools]
packages = ["shitlist"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "--ignore=dist --ignore=assets"
